Fazendo logica do caça niquel

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             <div class="brand">Cacino do Pedro</div>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="jogos.html">Jogos</a></li>
-                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="../templates/jogos.html">Jogos</a></li>
+                <li><a href="../templates/sobre.html">Sobre</a></li>
             </ul>
         </nav>
         <header class="hero">
@@ -24,6 +24,23 @@
         <section class="card">
             <p>Este cacino foi feito como projeto de estudo em HTML, CSS e JS.</p>
             <p>O que isso significa? Que o cacino é apenas para diversão e o dinheiro é fictício.</p>
+        </section>
+        <section class="games">
+            <h2>Jogos</h2>
+            <div class="games-grid">
+                <a class="game-card" href="./templates/niquel.html">
+                    <h3>Caca Niquel</h3>
+                    <p>Gire os rolos e teste sua sorte.</p>
+                </a>
+                <article class="game-card">
+                    <h3>Roleta</h3>
+                    <p>Escolha sua cor e acompanhe a bola.</p>
+                </article>
+                <article class="game-card">
+                    <h3>Blackjack</h3>
+                    <p>Chegue o mais perto de 21.</p>
+                </article>
+            </div>
         </section>
     </main>
     <script src="./static/scripts/index.js"></script>
