--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
                     <h3>Caca Niquel</h3>
                     <p>Gire os rolos e teste sua sorte.</p>
                 </a>
-                <article class="game-card">
+                <a class="game-card" href="./templates/roleta.html">
                     <h3>Roleta</h3>
                     <p>Escolha sua cor e acompanhe a bola.</p>
-                </article>
-                <article class="game-card">
+                </a>
+                <a class="game-card" href="./templates/blackjack.html">
                     <h3>Blackjack</h3>
                     <p>Chegue o mais perto de 21.</p>
-                </article>
+                </a>
             </div>
         </section>
     </main>
