BlackJack feito,falta pedra papel teosura

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
                     <h3>Blackjack</h3>
                     <p>Chegue o mais perto de 21.</p>
                 </a>
+                <a class="game-card" href="./templates/ppt.html">
+                    <h3>Pedra, Papel e Tesoura</h3>
+                    <p>Jogue contra o computador.</p>
+                </a>
             </div>
         </section>
     </main>
